k8s/apps/kibana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kibana-auth
  namespace: prodesk
spec:
  basicAuth:
    secret: kibana-basic-auth
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: prodesk
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kibana.kimsijun.com`)
      kind: Rule
      middlewares:
        - name: kibana-auth
      services:
        - name: kibana
          port: 5601
  tls:
    certResolver: letsencrypt
